cmake_minimum_required(VERSION 3.15)
project(test)
set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
set(EXEC_DIR ${PROJECT_SOURCE_DIR}/bin)
set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(CLAC_LIB calc)
set(SORT_LIB sort)
set(CALC_EXEC_NAME app1_calc)
set(SORT_EXEC_NAME app2_sort)

add_subdirectory(calc)
add_subdirectory(sort)
add_subdirectory(test1)
add_subdirectory(test2)
