cmake_minimum_required(VERSION 3.15)
project(CALC)
set(CXX_STANDARD_REQUIRED 11)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB HEAD ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
message(STATUS src: ${SRC})
message(STATUS head: ${HEAD})
# 拼接1
set(SRC_HEAD ${SRC} ${HEAD})
message(STATUS combine: ${SRC_HEAD})
# 拼接2
list(APPEND SRC1 ${SRC} ${HEAD})
message(STATUS list_append: ${SRC1})
list(REMOVE_ITEM SRC1 ${CMAKE_CURRENT_SOURCE_DIR}/include/head.h)
message(STATUS "remove_head.h: " ${SRC1})
list(LENGTH SRC1 len_src1)
message(${len_src1})
list(GET SRC1 3 2 1 index_3)
message(${index_3})
list(JOIN SRC1 - join_src1)
message(${join_src1})
list(FIND SRC1 /home/yhchaos/HPDS/string_op/src/mult.cpp is_find)
message(${is_find})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
list(INSERT SRC1 2 111111111111111111111111 222222222222222222222222222 3333333333333333333333333333)
message(${SRC1})

link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib_shared)
add_executable(app ${SRC})
target_link_libraries(app calc)